cmake_minimum_required(VERSION 3.17)
set(CMAKE_CUDA_ARCHITECTURES "75")
set(CMAKE_CUDA_COMPILER "/usr/local/cuda-11.8/bin/nvcc")
project(remap LANGUAGES C CXX CUDA)
set(CMAKE_CXX_STANDARD 20)
find_package(OpenCV REQUIRED PATHS /home/muhammad/opencv/ NO_DEFAULT_PATH)
add_executable(${PROJECT_NAME} main.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
